# Tracing

./: CMakeLists.txt  README.md
VC/: loopsub.sln  loopsub.vcxproj  octree.sln  octree.vcxproj
cmake/: FindGLFW.cmake
eigen/unsupported/Eigen/CXX11/src/Tensor/: TensorAssign.h  TensorContraction.h  TensorConversion.h  TensorConvolution.h  TensorEvaluator.h  TensorShuffling.h
loopsub/: CMakeLists.txt  LoopSubL.hxx  main.cc
meshL/: BLoopL.hxx  CMakeLists.txt  EdgeL.hxx  FaceL.hxx  HalfedgeL.hxx  LIO.hxx  LoopL.hxx  MeshL.hxx  MeshUtiL.hxx  NodeL.hxx  NormalL.hxx  SMFLIO.hxx  TexcoordL.hxx  VertexL.hxx  VertexLCirculator.hxx
octree/: CMakeLists.txt  GLOctree.hxx  Octree.hxx  main.cc  raytri.c  raytri.h  tribox3.c  tribox3.h
render_Eigen/: Arcball.hxx  BBox2.hxx  ColorConv.hxx  GLLight.hxx  GLMaterial.hxx  GLMesh.hxx  GLMeshA.hxx  GLMeshL.hxx  GLMeshR.hxx  GLMeshVBO.hxx  GLPanel.hxx  GLSRMesh.hxx  IDInfo.hxx  LICENSE  MeshR.hxx  OBJRIO.hxx  OFFRIO.hxx  PNGImage.hxx  README.md  RIO.hxx  SMFRIO.hxx  SelList.hxx  SelMesh.hxx  SelMeshA.hxx  SelMeshR.hxx  VWIO.hxx  c11timer.hxx  color.frag  color.vert  gouraud.frag  gouraud.vert  mtldata.h  myGL.hxx  phong.frag  phong.vert  shaders.h  stb_util.hxx  strutil.h  texture.frag  texture.vert  (+2 more)
render_Eigen/samples/: vbo_glfw_eigen.cxx
util/: VMProc.hxx  envDep.h  myEigen.hxx  myEnv.h  mydef.h  nvtimer.h  ppd.h  pq.h  strutil.h  timer.hxx  tokenizer.h
